...
                            <constraint firstItem="g85-Ph-8jY" firstAttribute="top" secondItem="8CD-DY-m8w" secondAttribute="top" id="khH-JJ-mlU"/>
                            <constraint firstItem="8CD-DY-m8w" firstAttribute="trailing" secondItem="g85-Ph-8jY" secondAttribute="trailing" id="stS-9e-84u"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="8CD-DY-m8w"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Select Currencies" id="m0e-F4-0wv">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="FPv-3i-dCV">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="cancelWithSender:" destination="79y-kp-2iQ" id="Z11-qh-fig"/>
                            </connections>
                        </barButtonItem>
...
